# girt

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  girt.toml
.claude-plugin/: plugin.json
.claude-plugin/agents/: engineer.md  pipeline-lead.md  qa.md  red-team.md
.claude-plugin/commands/: girt-status.md
.claude-plugin/hooks/: capability-intercept.sh  tool-call-gate.sh
.claude-plugin/skills/: list-tools.md  promote-tool.md  request-capability.md
.github/workflows/: ci.yml
agents/: architect.md
commands/: girt-build.md  girt-registry.md
crates/girt-core/: Cargo.toml
crates/girt-core/src/: decision.rs  engine.rs  error.rs  lib.rs  spec.rs
crates/girt-core/src/layers/: cache.rs  cli_check.rs  hitl.rs  llm.rs  mod.rs  policy.rs  registry.rs  similarity.rs
crates/girt-pipeline/: Cargo.toml
crates/girt-pipeline/src/: agent.rs  cache.rs  compiler.rs  config.rs  error.rs  lib.rs  llm.rs  metrics.rs  orchestrator.rs  publish.rs  queue.rs  stdlib.rs  tool_sync.rs  types.rs
crates/girt-pipeline/src/agent/: architect.rs  engineer.rs  planner.rs  qa.rs  red_team.rs
crates/girt-pipeline/tests/: e2e_pipeline.rs
crates/girt-proxy/: Cargo.toml
crates/girt-proxy/src/: approval.rs  evaluator.rs  main.rs  proxy.rs
crates/girt-proxy/tests/: smoke.rs
crates/girt-runtime/: Cargo.toml
crates/girt-runtime/src/: error.rs  lib.rs  lifecycle.rs  runtime_context.rs  storage.rs  wasistate.rs
crates/girt-runtime/tests/: integration_test.rs
crates/girt-runtime/wit/: world.wit
crates/girt-secrets/: Cargo.toml
crates/girt-secrets/src/: error.rs  lib.rs  oauth.rs  store.rs
docs/: oci-registry.md  plugin-installation.md  registry-contribution-guide.md  user-guide.md
docs/adrs/: ADR-000-design-principles.md  ADR-001-wassette-fork-strategy.md  ADR-002-wit-interface-standardization.md  ADR-003-tool-versioning-semantics.md  ADR-004-multi-language-build-targets.md  ADR-005-remote-girt-service.md  ADR-006-tool-promotion-pipeline.md  ADR-007-claude-agent-team-orchestration.md  ADR-008-queue-event-mechanism.md  ADR-009-pipeline-lead-persistence.md  ADR-010-embedded-wasm-runtime.md  ADR-011-pluggable-approval-wasm.md  ADR-012-planner-agent.md
docs/plans/: 001-girt-technical-design.md  2026-02-20-e2e-pipeline-implementation.md  2026-02-20-e2e-pipeline-test-design.md  2026-02-21-approval-wasm-design.md
docs/reviews/: 2026-02-20-e2e-pipeline.md
docs/reviews/security/: 2026-02-20-e2e-pipeline-security.md
scripts/: install.sh  mcp_test.py  run-e2e.sh  test_approval_flow.py  verify-proxy.sh
