[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Epiphytic/girt"

[workspace.dependencies]
rmcp = { version = "0.16", features = [
    "client",
    "server",
    "transport-io",
    "transport-child-process",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
tempfile = "3"
