[package]
name = "girt-core"
version = "0.1.0"
description = "Core decision engine for GIRT — Hookwise cascade for creation and execution gates"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
