[package]
name = "girt-pipeline"
version = "0.1.0"
description = "Build pipeline for GIRT — Architect, Engineer, QA, Red Team agents"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
girt-core = { path = "../girt-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
