[package]
name = "girt-proxy"
version = "0.1.0"
description = "MCP proxy for GIRT — routes agent requests through decision gates to Wassette"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "girt"
path = "src/main.rs"

[dependencies]
girt-core = { path = "../girt-core" }
girt-pipeline = { path = "../girt-pipeline" }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
