[package]
name = "girt-runtime"
version = "0.1.0"
description = "Embedded WASM component runtime for GIRT (ported from Wassette MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi.workspace = true
wasmtime-wasi-http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
